rest: return CPU usage
