# docs/openapi.json
@@ -647,12 +647,14 @@
               "application/json": [
                 {
                   "access_token": "Drmhze6EPcv0fN_81Bj-nA",
+                  "cpu_usage": "70536",
                   "disk_usage": "408",
                   "email": "user@reana.info",
                   "id": "00000000-0000-0000-0000-000000000000"
                 },
                 {
                   "access_token": "Drmhze6EPcv0fN_81Bj-nB",
+                  "cpu_usage": "70536",
                   "disk_usage": "408",
                   "email": "user2@reana.info",
                   "id": "00000000-0000-0000-0000-000000000001"
@@ -663,6 +665,9 @@
               "items": {
                 "properties": {
                   "access_token": {
+                    "type": "string"
+                  },
+                  "cpu_usage": {
                     "type": "string"
                   },
                   "disk_usage": {
@@ -737,6 +742,7 @@
             "examples": {
               "application/json": {
                 "access_token": "Drmhze6EPcv0fN_81Bj-nA",
+                "cpu_usage": "0",
                 "disk_usage": "0",
                 "email": "user@reana.info",
                 "id_": "00000000-0000-0000-0000-000000000000"
@@ -745,6 +751,9 @@
             "schema": {
               "properties": {
                 "access_token": {
+                  "type": "string"
+                },
+                "cpu_usage": {
                   "type": "string"
                 },
                 "disk_usage": {
@@ -2497,6 +2506,7 @@
             "description": "User information correspoding to the session cookie sent in the request.",
             "examples": {
               "application/json": {
+                "cpu_usage": "70536",
                 "disk_usage": "408",
                 "email": "user@reana.info",
                 "full_name": "John Doe",
